--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Zooming Effect</title>
 </head>
 <body>
-    <div>
-        <img src="facebook.png" alt="castle" style="tranform-origin:70% 40%">
+    <div class="container">
+        <img src="facebook.png" alt="castle" style="transform-origin:70% 40%; width: 50px; height: 50px;" sizes="20px">
     </div>
-    <div>
-        <img src="twitt.png" alt="castle" style="transform-origin: 50% 50%;">
+    <div class="container">
+        <img src="twitt.png" alt="castle" style="transform-origin: 50% 50%; width: 50px; height: 50px;">
     </div>
 
-    <div>
-        
+    <div class="container">
+        <img src="massenger.png" alt="castle" style="transform-origin: 20% 20%; width: 50px; height: 50px;">
     </div>
 </body>
 </html>
