--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <img src="facebook.png" alt="castle" style="transform-origin:70% 40%; width: 50px; height: 50px;" sizes="20px">
+        <img src="facebook.png" alt="castle" style="transform-origin:70% 40%;">
     </div>
     <div class="container">
-        <img src="twitt.png" alt="castle" style="transform-origin: 50% 50%; width: 50px; height: 50px;">
+        <img src="twitt.png" alt="castle" style="transform-origin: 50% 50%;">
     </div>
 
     <div class="container">
-        <img src="massenger.png" alt="castle" style="transform-origin: 20% 20%; width: 50px; height: 50px;">
+        <img src="massenger.png" alt="castle" style="transform-origin: 20% 20%;">
     </div>
 </body>
 </html>
